--- a/style.css
+++ b/style.css
@@ -54,33 +54,31 @@ body {
 }
 
 .toast.error i {
-    color: red;
+  color: red;
 }
 .toast.invalid i {
-    color: orange;
+  color: orange;
 }
 
-.toast::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5px;
-    background: green;
-    animation: anim 5s linear forwards;
-
+.toast::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background: green;
+  animation: anim 5s linear forwards;
 }
 
 @keyframes anim {
-    100%{
-        width: 0;
-    }
-    
+  100% {
+    width: 0;
+  }
 }
-.toast.error::after{
-    background: red;
+.toast.error::after {
+  background: red;
 }
-.toast.invalid::after{
-    background: orange;
+.toast.invalid::after {
+  background: orange;
 }
